# s2bindings.rs

./: .gitignore  .gitmodules  Cargo.toml  DOLT_REMOTE.md  README.md  manifest
.github/workflows/: ci.yml
crates/s2bindings/: Cargo.toml
crates/s2bindings-sys/: Cargo.toml  build.rs
crates/s2bindings-sys/csrc/: CMakeLists.txt  shim.cc  shim.h  wasm_exports.txt
crates/s2bindings-sys/src/: lib.rs
crates/s2bindings/src/: lib.rs
wasm/: README.md  build.sh  package.json
wasm/example/: index.html
wasm/scripts/: build-openssl.sh
wasm/src/: s2bindings.d.ts  s2bindings.mjs
wasm/test/: browser-test.html  smoke.mjs
